v1.4.0 - Downgrade to Java 8 for 1.8.8 support