@@ -12,7 +12,9 @@ import xyz.dragin.subcommandlib.util.TabUtils;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Main class used for Subcommand registry
@@ -35,7 +37,12 @@ public final class SubcommandLib extends JavaPlugin {
         pluginCommand.setTabCompleter(wrapper);
     }
 
-    private record SubcommandWrapper(Subcommand subcommand) implements CommandExecutor, TabCompleter {
+    private static class SubcommandWrapper implements CommandExecutor, TabCompleter {
+        private final Subcommand subcommand;
+        public SubcommandWrapper(Subcommand subcommand) {
+            this.subcommand = subcommand;
+        }
+
         @Override
         public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, String[] args) {
             // Pass to a nested subcommand if needed
@@ -45,73 +52,73 @@ public final class SubcommandLib extends JavaPlugin {
                         .onCommand(sender, command, label, Arrays.copyOfRange(args, 1, args.length));
             }
             // False if it cannot be run by itself
-            if (!subcommand.execute(sender, TabUtils.parseFlags(List.of(args), subcommand.getAllowedFlags(sender))))
+            if (!subcommand.execute(sender, TabUtils.parseFlags(Arrays.asList(args), subcommand.getAllowedFlags(sender))))
                 sender.sendMessage(ChatColor.RED + "This command cannot be run by itself.");
             return true;
         }
 
         @Override
         public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, String[] args) {
-            List<String> previouslySupplied = new ArrayList<>(List.of(args));
-            if (!previouslySupplied.isEmpty()) previouslySupplied.removeLast();
+            List<String> previouslySupplied = new ArrayList<>(Arrays.asList(args));
+            if (!previouslySupplied.isEmpty()) previouslySupplied.remove(previouslySupplied.size()-1);
 
             // Passes to a nested subcommand if needed
             if (!subcommand.getSubcommands().isEmpty()
                     && !previouslySupplied.isEmpty()
-                    && SubcommandUtils.contains(subcommand, previouslySupplied.getFirst())) {
-                return new SubcommandWrapper(SubcommandUtils.findSubcommandByName(subcommand, previouslySupplied.getFirst()))
+                    && SubcommandUtils.contains(subcommand, previouslySupplied.get(0))) {
+                return new SubcommandWrapper(SubcommandUtils.findSubcommandByName(subcommand, previouslySupplied.get(0)))
                         .onTabComplete(sender, command, label, Arrays.copyOfRange(args, 1, args.length));
             }
 
             // Initializes the output as all subcommand names
-            List<String> output = new ArrayList<>(subcommand.getSubcommands().stream().map(Subcommand::getName).toList());
+            List<String> output = subcommand.getSubcommands().stream().map(Subcommand::getName).collect(Collectors.toList());
 
             // Parsed version of the already given arguments
             List<Either<String, CommandFlag>> arguments = TabUtils.parseFlags(previouslySupplied, subcommand.getAllowedFlags(sender));
             // Checks whether to base the tab completion off valid options for a CommandOption
             if (!arguments.isEmpty()
-                    && arguments.getLast().isRight()
-                    && arguments.getLast().get() instanceof CommandOption option
-                    && option.getOption() == null
+                    && arguments.get(arguments.size()-1).isRight()
+                    && arguments.get(arguments.size()-1).get() instanceof CommandOption
+                    && ((CommandOption)arguments.get(arguments.size()-1).get()).getOption() == null
             ) {
-                output = option.getSuggestedOptions();
+                output = ((CommandOption)arguments.get(arguments.size()-1).get()).getSuggestedOptions();
             } else {
                 // Adds everything to the output
-                List<String> actualTabCompletion = subcommand.tabComplete(sender, arguments, !previouslySupplied.isEmpty() ? previouslySupplied.getLast() : "");
+                List<String> actualTabCompletion = subcommand.tabComplete(sender, arguments, !previouslySupplied.isEmpty() ? previouslySupplied.get(previouslySupplied.size()-1) : "");
                 List<CommandFlag> suggestedFlags = subcommand.suggestFlags(sender, arguments);
                 List<String> additionalFlags = new ArrayList<>();
                 if (args.length != 0) {
                     // Get the current flag sequence to build upon
-                    List<CommandFlag> context = TabUtils.parseFlags(List.of(args[args.length - 1]), subcommand.getAllowedFlags(sender))
+                    List<CommandFlag> context = TabUtils.parseFlags(Collections.singletonList(args[args.length - 1]), subcommand.getAllowedFlags(sender))
                             .stream()
                             .filter(Either::isRight)
                             .map(Either::get)
-                            .toList();
-                    if (!context.isEmpty() && context.getLast().getFlag().length() == 1) {
+                            .collect(Collectors.toList());
+                    if (!context.isEmpty() && context.get(context.size()-1).getFlag().length() == 1) {
                         // Add any suggested single-digit flags
                         additionalFlags.addAll(
-                                context.getLast().getSuggestedNext(context)
+                                context.get(context.size()-1).getSuggestedNext(context)
                                         .stream()
                                         .filter(character ->
                                                 subcommand.getAllowedFlags(sender)
                                                         .stream()
                                                         .filter(flag -> flag.getFlag().length() == 1)
                                                         .map(flag -> flag.getFlag().charAt(0))
-                                                        .toList()
+                                                        .collect(Collectors.toList())
                                                         .contains(character)
                                         )
-                                        .map(character -> "-" + String.join("", context
+                                        .map(character -> "-" + context
                                                 .stream()
                                                 .map(CommandFlag::getFlag)
-                                                .toList()
-                                        ) + character)
-                                        .toList()
+                                                .collect(Collectors.joining(""))
+                                         + character)
+                                        .collect(Collectors.toList())
                         );
                         // I'm gonna look at this code in a year and have no clue what I was thinking with all this stream shit
                     }
                 }
                 output.addAll(actualTabCompletion);
-                output.addAll(suggestedFlags.stream().map(CommandFlag::toString).toList());
+                output.addAll(suggestedFlags.stream().map(CommandFlag::toString).collect(Collectors.toList()));
                 output.addAll(additionalFlags);
             }
 
